--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -113,9 +113,79 @@ Trečiojo laboratorinio darbo reikalavimai.
 
 \section{Justo Tvarijono maketo vertinimas}
 \subsection{Euristinis tikrinimas}
+\begin{center}
+\begin{longtable}[!htb]{|p{3.5cm}|p{1.9cm}|p{9.6cm}|}
+	\caption{Džiugo Mažulio vertinimas}
+	\endfirsthead
+	\endhead
+  \hline
+	Euristika & Defekto sunkumas & Komentaras \\ \hline
+	Būsenos matomumas & 1 & Nėra pagrindinio puslapio indikatorių, todėl šiame lange neaiški vartotojo pozicija. \\ \hline
+	Sistemos atitikimas realiam pasauliui & 0 & - \\ \hline
+	Naudotojo valdomas dialogas & 0 & - \\ \hline
+	Darna ir standartai & 1 & Nerealizuotos ikonos. Maketo 1 puslapyje, pagrindiniame lange, skiltis "Naujienos" užgriozdina langą tekstine informacija. \\ \hline
+	Klaidų prevencija & 0 & - \\ \hline
+	Atpažinimas geriau nei atsiminimas & 0 & - \\ \hline
+	Naudojimo lankstumas ir našumas & 3 & Maketo 7 puslapyje, mokėjimo pavedimo lange, nerealizuotas gavėjų siūlymas pagal kriterijus, vartotojas duomenis turi įvesti pats. Taip pat Maketo 1 puslapyje, pagrindiniame lange, vartotojas nemato sąskaitos bei su ja susijusių duomenų. Kad juos pasiektų vartotojas privalo išskleisti sąskaitos juostą. \\ \hline
+	Estetiškas ir minimalistiniz dizainas & 0 & - \\ \hline
+	Remti klaidų atpažinimą, jų priežasčių nustatymą ir taisymą & 0 & - \\ \hline
+	Pagalba ir dokumentacija & 0 & -  \\ \hline
+\end{longtable}
+\end{center}
+
 \subsection{Pažintinė peržvalga}
-\subsection{Apibendrinimas}
+
+\begin{center}
+\begin{longtable}[!htb]{|p{5cm}|p{5cm}|p{5cm}|}
+	\caption{Džiugo Mažulio vertinimas. Paieška}
+\endfirsthead
+\endhead
+	\hline
+	Užduoties žingsniai & Ar aiškiai matoma, ką daryti? & Ar suprantamas atsakas? \\ \hline
+	1. Įvesti paieškos frazę į paieškos teksto lauką & Taip, vartotojui įprastoje vietoje - viduryje viršutinės ekrano dalies - vaizduojama paieškos juosta su padidinimo stiklo ikona. & Taip, įvestas tesktas atvaizduojamas paieškos juostoje.   \\ \hline
+	2. Atlikti paiešką & Taip, padidinimo stiklo ikona yra ne tik sutartinis, bet ir intuityvus paieškos funckijos žymėjimas & Taip, sistema užkrauna paieškos rezultatų langą. \\ \hline
+	3. Rušiuoti rezultatus & Taip, rezultatų kategorijos vaizduojamos kairėje lango pusėje pabrauktu mėlynos spalvos tekstu & Taip, sistema pavaizduoja pasirinktai kategorijai priklausančius paieškos rezultatus \\ \hline
+	4. Atidaryti paieškos rezultatą & Taip, pabraukta mėlynos spalvos rezultato antraštė indikuoja, jog pastarosios paspaudimu vartotojas bus nukreiptas į atitinkamo rezultato langą. & Taip, sistema vaizduoja pasirinką rezultatą su visu jam priklausančiu turiniu. \\ \hline
+\end{longtable}
+\end{center}
+
 \section{Michal Stankevič maketo vertinimas}
+\subsection{Euristinis tikrinimas}
+\begin{center}
+\begin{longtable}[!htb]{|p{3.5cm}|p{1.9cm}|p{9.6cm}|}
+	\caption{Džiugo Mažulio vertinimas}
+	\endfirsthead
+	\endhead
+  \hline
+	Euristika & Defekto sunkumas & Komentaras \\ \hline
+	Būsenos matomumas & 1 & Maketo 4 puslapyje nenurodyta vartotojo būsena. \\ \hline
+	Sistemos atitikimas realiam pasauliui & 0 & - \\ \hline
+	Naudotojo valdomas dialogas & 0 & - \\ \hline
+	Darna ir standartai & 1 & Egzistuoja iš esmės skirtingos langų temos. \\ \hline
+	Klaidų prevencija & 3 & Sujungti tarpusavyje meniu mygtukai kelia gretimos funkcijos pasirinkimo grėsmę. Taip pat maketo 1 lango meniu esantis mygtukas "Paieška" su padidinimo stiklo ikona sufleruoja, jog tai paieškos juosta, o ne mygtukas, atidarantis paieškos puslapį.\\ \hline
+	Atpažinimas geriau nei atsiminimas & 1 & Trūksta grafinių elementų, kurie padarytų naršymą efektyvesnį bei intuityvesnį. \\ \hline
+	Naudojimo lankstumas ir našumas & 2 & Mokėjimo languose vartotojas neturi galimybės vieno mygtuko paspaudimu pasiekti pagrindiniame meniu vaizduojamas funkcijas. Taip pat atliekant mokėjimo pavedimą vartotojui siūlomi tik ankščiau naudoti gavėjai. Trūksta paieškos rezultatų apdorojamumo. \\ \hline
+	Estetiškas ir minimalistinis dizainas & 0 & - \\ \hline
+	Remti klaidų atpažinimą, jų priežasčių nustatymą ir taisymą & 0 & - \\ \hline
+	Pagalba ir dokumentacija & 0 & Sistema turi sufleruoti vartotojui, jog tam tikruose languose siekdamas grįžti atgal jis turi paspausti ant tuščios vietos. \\ \hline
+\end{longtable}
+\end{center}
+
+\subsection{Pažintinė peržvalga}
+
+\begin{center}
+\begin{longtable}[!htb]{|p{5cm}|p{5cm}|p{5cm}|}
+	\caption{Džiugo Mažulio vertinimas. Paieška}
+\endfirsthead
+\endhead
+	\hline
+	Užduoties žingsniai & Ar aiškiai matoma, ką daryti? & Ar suprantamas atsakas? \\ \hline
+	1. Atsidaryti paieškos langą & Ne, pagrindiniame puslapyje esantį "Ieškoti" mygtuką galima supainioti su paieškos juosta. & Taip, paspaudus mygtuką atidaromas paieškos langas. \\ \hline
+	2. Įvesti paieškos frazę į paieškos teksto lauką & Taip, paieškos juostoje parašyta "Įveskite frazę" & Taip, įvesti simboliai atvaizduojami paieškos juostoje. \\ \hline
+	3. Atlikti paiešką & Taip, greta paieškos juostos vaizduojamas paryškintas mygtukas "Ieškoti" nepalieka vietos interpretacijoms. & Taip, sistema pavaizduoja paieškos rezultatų langą \\ \hline
+	4. Atidaryti paieškos rezultatą & Ne, rezultatų antraštės išsiskiria tik šrifto dydžiu. Vartotojui kyla dvejonių kur derėtų spausti siekiant pasirinkti pageidaujamą paieškos rezultatą. & Ne, paieškos rezultato atidarymas makete neįgyvendintas. \\ \hline
+\end{longtable}
+\end{center}
 \subsection{Euristinis tikrinimas}
 \begin{center}
 \begin{longtable}[!htb]{|p{3.5cm}|p{1.9cm}|p{9.6cm}|}
