--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -231,6 +231,7 @@ Trečiojo laboratorinio darbo reikalavimai.
 % Niekaip neišsiaiškinau ar apibendrinimai turi būt kiekvieno vertintojo atskirai, ar abiejų kartu.
 Šis maketas yra minimalistinis, ko pasekoje neturi didelio kiekio defektų euristiniame patikrinime. Maketas inovatyvus pakankamai paprastas naudoti, tačiau jame trūksta pagalbos ir dokumentacijos naujiems vartotojams, o patyruniems vartotojams jis gali pasirodyti per daug paprastas.
 \section{Išvados}
+Detaliojo prototipo pagrindu pasirinkome Justo Tvarijono maketą patrauklesnės informacijos architektūros bei vertikaliojo meniu. Mažėsnių hierachijos langų struktūrą importuosime iš Džiugo Mažulio maketo dėl patrauklesnio dydžio, išdėstymo. 
 \section{Priedai}
 	\begin{itemize}
 		\item Justas Tvarijonas - VU MIF programų sistemų sistemos 3 kurso studentas.
