--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -79,11 +79,8 @@ Trečiojo laboratorinio darbo reikalavimai.
 	Būsenos matomumas & 2 & Vartotojas savo buvimo vietą mato tik būdamas pirmame hierarchijos sluoksnyje, jam einant į gylesnius sluoksnius, niekur lange nėra užrašomas esamo lango pavadinimas, nerodomas nukeliautas kelias. \\ \hline
 	Sistemos atitikimas realiam pasauliui & 1 & Vietinių mokėjimų lange vartotojui gali būti ne akivaizdu, ką reiškia terminas "Gavėjo pavadinimas" \\ \hline
 	Naudotojo valdomas dialogas & 1 & Languose nėra grįžimo atgal mygtukų, vienintelis būdas grįžti yra naudojantis mygtukų juosta. \\ \hline
-	Darna ir standartai & 0 & - \\ \hline
 	Klaidų prevencija \label{lentele:klaiduPrevencijaJ} & \hyperref[fig:klaiduPrevencijaMygtukai]{4} & 1. Vietinių mokėjimų lange mygtukai "Patvirtinti mokėjimą" ir "Išsaugoti duomenis" nėra atskirti tarpais, bei paspaudus "Patvirtinti mokėjimą" nėra atliekamas papildomas paklausimas ar vartotojas nori atlikti tą mokėjimą, todėl yra galimybė, kad vartotojas norėdamas išsaugoti duomenis prieš savo valią atliks mokėjimo pavedimą. 2. Vietinių mokėjimų lange net neįvedus gavėjo duomenų leidžiama bandyti išsaugoti jo duomenis (tada parodomas klaidos pranešimas, kuriame intuityviai pagal pelės pozicija norisi spausti tą mygtuką, kuris nukelia į pagrindinį langą). Būtų galima išjungti šį mygtuką, kol nėra užpildomi visi privalomi laukai. \\ \hline
-	Atpažinimas geriau nei atsiminimas & 0 & - \\ \hline
 	Naudojimo lankstumas ir našumas & 1 & Gavėjo sąrašo negalima išrikiuoti pagal poreikius. Galima patobulinimas: leisti vartotojui išrikiuoti gavėjų ruošinius pagal save, kad dažniausiai naudojami/svarbiausi būtų viršuje. \\ \hline
-	Estetiškas ir minimalistiniz dizainas & 0 & - \\ \hline
 	Remti klaidų atpažinimą, jų priežasčių nustatymą ir taisymą & 1 & Klaidos pranešimuosi vartojamas abstrakčios frazės. \\ \hline
 	Pagalba ir dokumentacija & 1 & Mokėjimo lange būtų gerai matyti informaciją apie laukelį į kurį yra vedama reikšmė(ta informacija turėtų aiškiai paaiškinti, kaip turi atrodyti į konkretų laukelį vedami duomenys), tai sumažėtų klaidų/neteisingai įvestų duomenų tikimybė.  \\ \hline
 \end{longtable}
@@ -105,7 +102,7 @@ Trečiojo laboratorinio darbo reikalavimai.
 	\hline
 	Užduoties žingsniai & Ar aiškiai matoma, ką daryti? & Ar suprantamas atsakas? \\ \hline
 	1. Atsidaryti mokėjimų langą & Taip, meniu juostoje mygtukas pavadinimu "Mokėjimai" vartotojui siejasi su jo siekiamu tikslu & Taip, vartotojas gali matyti ar padarė teisingą žingsnį, kadangi šis paspaudimas priartino jį prie tikslo (vartotojas gavo konkretesnius mokėjimo pasirinkimus), bei paspaustas mygtukas pakeitė spalvą. \\ \hline
-	2. Pasirinkti vietinius mokėjimus & Taip, tarp lange išdėstytų mygtukų nesunku rasti ieškomą(su pavadinimu "vietiniai mokėjimai") & Nevisiškai, vartotojas, kuris dažniau naudojasi sistema supras, kad yra tame lange, kuriame turi būti, tačiau jame niekur neparašyta, kad tai vietinių mokėjimų langas, tai gali suklaidinti kai kuriuos vartotojus. \\ \hline
+	2. Pasirinkti vietinius mokėjimus & Taip, tarp lange išdėstytų mygtukų nesunku rasti ieškomą(su pavadinimu "vietiniai mokėjimai") & Ne, vartotojas, kuris dažniau naudojasi sistema supras, kad yra tame lange, kuriame turi būti, tačiau jame niekur neparašyta, kad tai vietinių mokėjimų langas, tai gali suklaidinti kai kuriuos vartotojus. \\ \hline
 	3. Suvesti duomenis & Taip, įvedimo laukai gerai matomi, ant kiekvieno laukelio parašyta, ką jame reikia įvesti(tačiau ant jo paspaudus paaiškinimai digsta) & Ne, sistema niekaip neparodo ar įvesti duomenys yra tinkami. Būtų galima pavaizduoti žalią varnelę prie įvedimo lauko, jeigu duomenys yra validūs. \\ \hline
 	4. Patvirtinti mokėjimą & Taip, ekrano apačioje yra mygtukas, kurio tekstas pakankamai aiškiai nurodo, kad jis skirtas mokėjimo patvirtinimui & Taip, patvirtinus mokėjimą išoką patvirtinimo langas, iš kurio vartotojas sužino, kad jo mokėjimas sėkmingai įgyvendintas. \\ \hline
 \end{longtable}
@@ -174,7 +171,24 @@ Trečiojo laboratorinio darbo reikalavimai.
 	Pagalba ir dokumentacija & 0 & Sistema turi sufleruoti vartotojui, jog tam tikruose languose siekdamas grįžti atgal jis turi paspausti ant tuščios vietos. \\ \hline
 \end{longtable}
 \end{center}
-
+\begin{center}
+\begin{longtable}[!htb]{|p{3.5cm}|p{1.9cm}|p{9.6cm}|}
+	\caption{Justo Tvarijono vertinimas}
+	\endfirsthead
+	\endhead
+	\hline
+	Euristika & Defekto sunkumas & Komentaras \\ \hline
+	Klaidų prevencija \label{lentele:klaiduPrevencijaM} & \hyperref[fig:klaiduPrevencijaMygtukai2]{4} & 1. Vietinių mokėjimų lange mygtukai "Mokėti" ir "Atidėti" atskirti labai mažu tarpu, bei paspaudus "Mokėti" nėra atliekamas papildomas paklausimas ar vartotojas nori atlikti tą mokėjimą, todėl yra galimybė, kad vartotojas norėdamas atidėti mokėjimą prieš savo valią atliks mokėjimo pavedimą. \\ \hline
+	Estetiškas ir minimalistiniz dizainas & 1 & Swedbank mygtukas pradiniame lange nėra reikalingas, kadangi jis neatlieka jokio funkcionalumo ir nesuteikia jokios reikalingos informacijos. Grįžimo mygtukas yra pačioje lango apačioje, jį gali uždengti puslapio klostės. \\ \hline
+	Pagalba ir dokumentacija & 1 & Mokėjimo lange būtų gerai matyti informaciją apie laukelį į kurį yra vedama reikšmė(ta informacija turėtų aiškiai paaiškinti, kaip turi atrodyti į konkretų laukelį vedami duomenys). \\ \hline
+\end{longtable}
+\end{center}
+\begin{figure}[H]
+	\includegraphics[scale=0.55]{MokejimoPatvirtinimasKlaiduPrevencija2.png}
+	\caption{Mygtukų išdėstymas vietinių mokėjimų lange}
+	\label{fig:klaiduPrevencijaMygtukai2}
+\end{figure}
+\hyperref[lentele:klaiduPrevencijaM]{Defektas} yra didelės reikšmės, kadangi mokėjimo pavedimas yra rimta operacija, todėl klaidingas jos įvygdymas sukeltų reikšmingų nepatogumų sistemos naudotojui. Šią problemą būtų galima spręsti prieš mokėjimo įvygdymą pateikiant papildomą patvirtinimo langą.
 \subsection{Pažintinė peržvalga}
 
 \begin{center}
@@ -190,34 +204,6 @@ Trečiojo laboratorinio darbo reikalavimai.
 	4. Atidaryti paieškos rezultatą & Ne, rezultatų antraštės išsiskiria tik šrifto dydžiu. Vartotojui kyla dvejonių kur derėtų spausti siekiant pasirinkti pageidaujamą paieškos rezultatą. & Ne, paieškos rezultato atidarymas makete neįgyvendintas. \\ \hline
 \end{longtable}
 \end{center}
-\subsection{Euristinis tikrinimas}
-\begin{center}
-\begin{longtable}[!htb]{|p{3.5cm}|p{1.9cm}|p{9.6cm}|}
-	\caption{Justo Tvarijono vertinimas}
-	\endfirsthead
-	\endhead
-  \hline
-	Euristika & Defekto sunkumas & Komentaras \\ \hline
-	Būsenos matomumas & 0 & - \\ \hline
-	Sistemos atitikimas realiam pasauliui & 0 & - \\ \hline
-	Naudotojo valdomas dialogas & 0 & - \\ \hline
-	Darna ir standartai & 0 & - \\ \hline
-	Klaidų prevencija \label{lentele:klaiduPrevencijaM} & \hyperref[fig:klaiduPrevencijaMygtukai2]{4} & 1. Vietinių mokėjimų lange mygtukai "Mokėti" ir "Atidėti" atskirti labai mažu tarpu, bei paspaudus "Mokėti" nėra atliekamas papildomas paklausimas ar vartotojas nori atlikti tą mokėjimą, todėl yra galimybė, kad vartotojas norėdamas atidėti mokėjimą prieš savo valią atliks mokėjimo pavedimą. \\ \hline
-	Atpažinimas geriau nei atsiminimas & 0 & - \\ \hline
-	Naudojimo lankstumas ir našumas & 0 & - \\ \hline
-	Estetiškas ir minimalistiniz dizainas & 1 & Swedbank mygtukas pradiniame lange nėra reikalingas, kadangi jis neatlieka jokio funkcionalumo ir nesuteikia jokios reikalingos informacijos. Grįžimo mygtukas yra pačioje lango apačioje, jį gali uždengti puslapio klostės. \\ \hline
-	Remti klaidų atpažinimą, jų priežasčių nustatymą ir taisymą & 0 & - \\ \hline
-	Pagalba ir dokumentacija & 1 & Mokėjimo lange būtų gerai matyti informaciją apie laukelį į kurį yra vedama reikšmė(ta informacija turėtų aiškiai paaiškinti, kaip turi atrodyti į konkretų laukelį vedami duomenys). \\ \hline
-\end{longtable}
-\end{center}
-\begin{figure}[H]
-	\includegraphics[scale=0.55]{MokejimoPatvirtinimasKlaiduPrevencija2.png}
-  \caption{Mygtukų išdėstymas vietinių mokėjimų lange}
-	\label{fig:klaiduPrevencijaMygtukai2}
-\end{figure}
-\hyperref[lentele:klaiduPrevencijaM]{Defektas} yra didelės reikšmės, kadangi mokėjimo pavedimas yra rimta operacija, todėl klaidingas jos įvygdymas sukeltų reikšmingų nepatogumų sistemos naudotojui. Šią problemą būtų galima spręsti prieš mokėjimo įvygdymą pateikiant papildomą patvirtinimo langą.
-\subsection{Pažintinė peržvalga}
-
 \begin{center}
 \begin{longtable}[!htb]{|p{5cm}|p{5cm}|p{5cm}|}
 	\caption{Justo Tvarijono vertinimas. Mokėjimo pavedimo atlikimas}
